--- a/Reto1 CV/index.html
+++ b/Reto1 CV/index.html
@@ -66,7 +66,7 @@
                 Informacion Personal
             </h2>
             <p class="mt-4 text-gray-700">
-                Soy un full stack web developer y productor multimedial,
+                Soy un full stack web developer y productor multimedial
                 con una gran capacidad para el
                 trabajo en equipo, dispuesto a afrontar
                 nuevos retos que me impulsen a crecer
